--- a/analogsea.css
+++ b/analogsea.css
@@ -64,10 +64,8 @@ button {
 	background-color: green;
 	border: 2px lightgrey;
 	border-radius: 4px;
-	width: 278px;
-	height: 40px;
-	padding-left: 15px;
-	padding-right: 15px;
+	width: 310px;
+	height: 45px;
 	color: white;
 	font-family: Arial;
 	font-size: 20px;
@@ -78,14 +76,17 @@ button {
 }
 
 .forgot {
-	color: grey;
 	text-align: center;
 	margin-top: 10px;
+	font-family: Arial;
+	color: grey;
 }
 .login {
 	text-align: center;
 	color: white;
 	font-weight: bold;
+	font-size: 17px;
+	font-family: arial;
 }
 
 .login a {
